pulse aout fails to enter drain

tiny-clip

sometimes drains

[00007f4a5cc2d470] araw decoder error: DEC 448001 448001 2
[00007f4a5cc2d470] araw decoder error: DEC 469334 469334 2
[00007f4a5cc2d470] araw decoder error: DEC 490668 490668 2
[00007f4a5cc2d470] araw decoder error: DEC 512001 512001 2
[00007f4a5cc2d470] araw decoder error: DEC 533334 533334 2
[00007f4a5cc2d470] araw decoder error: DEC 554668 554668 2
[00007f4a5cc2d470] araw decoder error: DEC 576001 576001 2
[00007f4a5cc2d470] araw decoder error: DEC 597334 597334 2
[00007f4a5cc2d470] araw decoder error: DEC 618668 618668 2
[0000000002066e30] main input debug: waiting decoder fifos to empty
[0000000002066e30] main input debug: waiting decoder fifos to empty
[0000000002066e30] main input debug: waiting decoder fifos to empty
[0000000002066e30] main input debug: waiting decoder fifos to empty
[0000000002066e30] main input debug: waiting decoder fifos to empty
[0000000002066e30] main input debug: waiting decoder fifos to empty
[0000000002066e30] main input debug: waiting decoder fifos to empty
[00007f4a5cc2d470] main decoder debug: killing decoder fourcc `s16l'
[00007f4a5cc2d470] main decoder debug: removing "audio decoder" module "araw"

sometimes not...

[00007f4dd0c2d470] araw decoder error: DEC 490668 490668 2
[00007f4dd0c2d470] araw decoder error: DEC 512001 512001 2
[00007f4dd0c2d470] araw decoder error: DEC 533334 533334 2
[00007f4dd0c2d470] araw decoder error: DEC 554668 554668 2
[00007f4dd0c2d470] araw decoder error: DEC 576001 576001 2
[00007f4dd0c2d470] araw decoder error: DEC 597334 597334 2
[00007f4dd0c2d470] araw decoder error: DEC 618668 618668 2
[00007f4dd0c2d470] main decoder debug: killing decoder fourcc `s16l'
[00007f4dd0c2d470] main decoder debug: removing "audio decoder" module "araw"