pulse: fix drain if timing update fails (unlikely)

Fixes #27690